update app references in docker-compose, frontend/package.json, manifest.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - data-volume:/data/db
 
   frontend:
+    container_name: frontend
     build:
       context: ./frontend
     command: yarn dev
